Change journal rerun to happen in flow

--- a/force-app/main/default/lwc/nksJournalFeilregistert/nksJournalFeilregistert.html
+++ b/force-app/main/default/lwc/nksJournalFeilregistert/nksJournalFeilregistert.html
@@ -9,7 +9,7 @@
                 label="External reference suffix"
                 style="width: 50%"
             ></lightning-input>
-            <lightning-input lwc:ref="limit" type="text" label="Limit" style="width: 50%"></lightning-input>
+            <lightning-input lwc:ref="filter" type="text" label="Filter" style="width: 50%"></lightning-input>
             <br />
             <lightning-button
                 disabled={disabled}
