replaced NAV with Nav

--- a/force-app/main/default/lwc/nksConvNoteViewer/nksConvNoteViewer.html
+++ b/force-app/main/default/lwc/nksConvNoteViewer/nksConvNoteViewer.html
@@ -13,7 +13,7 @@
                     </lightning-layout-item>
                     <lightning-layout-item size="12" padding="horizontal-small">
                         <p class="weak-text">
-                            {conversationNote.CRM_Created_By_Ident__c} (NAV-enhet
+                            {conversationNote.CRM_Created_By_Ident__c} (Nav-enhet
                             {conversationNote.CRM_Created_By_NAV_Unit__c}) &nbsp;
                             <lightning-formatted-date-time
                                 month="long"
