--- a/force-app/main/default/lwc/nksFedrekvotesakenChild/nksFedrekvotesakenChild.html
+++ b/force-app/main/default/lwc/nksFedrekvotesakenChild/nksFedrekvotesakenChild.html
@@ -11,12 +11,12 @@
         <c-ds-date-picker label="Barnets fødselsdato" required="true" class="birthdayField"></c-ds-date-picker>
         <c-ds-radio
             style="text-align: left"
-            title="Hadde du permisjon med barnet selv om du ikke fikk foreldrepenger fra NAV?"
+            title="Hadde du permisjon med barnet selv om du ikke fikk foreldrepenger fra Nav?"
             onradiochange={radioChange}
             options={leaveOptions}
             class="leaveRadio"
             ><div slot="legend" class="slds-grid">
-                <p>Hadde du permisjon med barnet selv om du ikke fikk foreldrepenger fra NAV?</p>
+                <p>Hadde du permisjon med barnet selv om du ikke fikk foreldrepenger fra Nav?</p>
             </div></c-ds-radio
         >
 
