--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -52,12 +52,12 @@
                                 <div class="">
                                     <c-ds-radio
                                         style="text-align: left"
-                                        title="Godtar du at vi kan bruke samtalen din til opplæring av veiledere i NAV?"
+                                        title="Godtar du at vi kan bruke samtalen din til opplæring av veiledere i Nav?"
                                         options={medskrivOptions}
                                         class="radioFocus"
                                         ><div slot="legend" class="slds-grid">
                                             <p>
-                                                Godtar du at vi kan bruke samtalen din til opplæring av veiledere i NAV?
+                                                Godtar du at vi kan bruke samtalen din til opplæring av veiledere i Nav?
                                             </p>
                                             <c-ds-help-text
                                                 style="margin-left: 16px"
