new url for Dokumentinnsynsløsningen

--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
@@ -11,7 +11,7 @@
                 <p class="navds-body-long navds-typo--spacing">
                     <strong>
                         For meldinger om dokumenter og/eller informasjonsbrev se&#32;
-                        <a href="https://person.nav.no/mine-saker/" target="_self" class="lenke lenke-inline"
+                        <a href="https://www.nav.no/dokumentarkiv" target="_self" class="lenke lenke-inline"
                             >brev og vedtak</a
                         >
                     </strong>
