--- a/force-app/main/default/lwc/crmStoMessaging/newDesignTemplate.html
+++ b/force-app/main/default/lwc/crmStoMessaging/newDesignTemplate.html
@@ -8,6 +8,7 @@
         record-id={threadId}
         single-thread={singleThread}
         card-title={actualCardTitle}
+        icon-name={iconName}
         text-template={textTemplate}
         show-close={showClose}
         english-text-template={englishTextTemplate}
