--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.html
@@ -5,6 +5,7 @@
         key={thread.recordId}
         id="a"
         style="padding-left: 0rem; padding-right: 0rem; border: 1px solid var(--navds-semantic-color-border, #707070)"
+        onclick={handleNavigation}
     >
         <lightning-layout vertical-align="center" class="slds-size_1-of-1">
             <div class="slds-is-relative hideMobile" style="min-width: 88px">
