added more logging + moved amplitude functions to reporting repo

--- a/force-app/main/default/lwc/nksViewThread/nksViewThread.html
+++ b/force-app/main/default/lwc/nksViewThread/nksViewThread.html
@@ -2,5 +2,6 @@
     <c-crm-messaging-community-thread-viewer
         record-id={_recordId}
         max-length={maxLength}
+        log-amplitude-event
     ></c-crm-messaging-community-thread-viewer>
 </template>
