--- a/force-app/main/default/lwc/nksViewThread/nksViewThread.html
+++ b/force-app/main/default/lwc/nksViewThread/nksViewThread.html
@@ -3,5 +3,6 @@
         record-id={_recordId}
         max-length={maxLength}
         log-amplitude-event
+        onlogevent={logAmplitudeEvent}
     ></c-crm-messaging-community-thread-viewer>
 </template>
