--- a/force-app/main/default/lwc/nksViewThread/nksViewThread.html
+++ b/force-app/main/default/lwc/nksViewThread/nksViewThread.html
@@ -2,5 +2,7 @@
     <c-crm-messaging-community-thread-viewer
         record-id={_recordId}
         max-length={maxLength}
+        log-amplitude-event
+        onlogevent={logAmplitudeEvent}
     ></c-crm-messaging-community-thread-viewer>
 </template>
