--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
@@ -4,14 +4,23 @@
             <h1 class="navds-heading navds-heading--2xlarge">{title}</h1>
         </div>
         <div class="header aroundGap">
-            <c-nav-Button url="https://www.nav.no/kontaktoss" title="Kontakt oss"></c-nav-Button>
+            <c-nav-Button
+                url="https://www.nav.no/kontaktoss"
+                title="Kontakt oss"
+                log-amplitude-event
+                onlogevent={handleContactUsClick}
+            ></c-nav-Button>
         </div>
         <div class="nav-wrapper">
             <div class="body">
                 <p class="navds-body-long navds-typo--spacing">
                     <strong>
                         For meldinger om dokumenter og/eller informasjonsbrev se&#32;
-                        <a href="https://www.nav.no/dokumentarkiv" target="_self" class="lenke lenke-inline"
+                        <a
+                            href="https://www.nav.no/dokumentarkiv"
+                            target="_self"
+                            class="lenke lenke-inline"
+                            onclick={handleDocumentArchiveClick}
                             >brev og vedtak</a
                         >
                     </strong>
