updates for sto + amplitude logging

--- a/force-app/main/default/lwc/stoMedskrivSamtykke/stoMedskrivSamtykke.html
+++ b/force-app/main/default/lwc/stoMedskrivSamtykke/stoMedskrivSamtykke.html
@@ -1,5 +1,5 @@
 <template>
-    <template if:true={showPanel}>
+    <template lwc:if={showPanel}>
         <div class="navds-panel slds-var-m-horizontal_medium" style="margin-top: -0.5rem; margin-bottom: 5.5rem">
             <h2 class="navds-heading navds-heading--xsmall navds-typo--spacing">{title}</h2>
             <p class="navds-body-long navds-body-long--small">{text}</p>
