--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -8,7 +8,7 @@
                 class="text-center"
                 style="background-color: #fff; display: block; padding: 1rem 1rem 1rem 1rem; border-radius: 4px"
             >
-                <template if:true={validparameter}>
+                <template if:true={validQueryParameter}>
                     <img aria-hidden="true" src={logopath} class="logo" />
                     <h2 class="navds-labels blokk-s" style="color: #0067c5">{themeToShow}</h2>
                     <c-community-error-summary
@@ -156,6 +156,12 @@
                             </svg>
                         </template>
                     </div>
+                </template>
+                <template lwc:else>
+                    <lightning-formatted-rich-text
+                        class="navds-body-short navds-body-short--small blokk-xs description"
+                        value="Ops, denne linken fungerte ikke."
+                    ></lightning-formatted-rich-text>
                 </template>
             </div>
         </div>
