fix for acceptedcategories, err msg and andre-hjelpemidler

--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -160,7 +160,7 @@
                 <template lwc:else>
                     <lightning-formatted-rich-text
                         class="navds-body-short navds-body-short--small blokk-xs description"
-                        value="Ops, denne linken fungerte ikke."
+                        value={wrongLinkMsg}
                     ></lightning-formatted-rich-text>
                 </template>
             </div>
