--- a/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
+++ b/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.html
@@ -2,7 +2,7 @@
     <div style="margin-bottom: 4rem">
         <div>
             <div class="header">
-                <h1 class="navds-heading navds-heading--2xlarge">Berørt av fedrekvotesaken?</h1>
+                <h1 class="navds-heading navds-heading--2xlarge">{title}</h1>
             </div>
             <div class="text-center sizeAround">
                 <template lwc:if={loading}>
@@ -36,20 +36,17 @@
                 <template lwc:else>
                     <template lwc:if={hasNavTask}>
                         <p style="margin: 1.5rem" aria-live="polite">
-                            Saken din er registrert hos oss. Du finner oversikt over informasjonen du har gitt oss i
-                            innboksen din som en kvittering, eller referat fra tidligere dialog. Vi tar kontakt hvis vi
-                            trenger flere opplysninger fra deg.
+                            Takk for informasjonen. Vi tar kontakt hvis vi trenger flere opplysninger fra deg.
                             <br />
                             <br />
                             Trenger du å endre på informasjonen som du allerede har sendt inn, ber vi om at du&nbsp;
-                            <a href="https://www.nav.no/kontaktoss">kontakter oss</a>. Vi behandler mottatte henvendelser så raskt vi kan, og vi forventer at alle får svar i løpet av 2025.
+                            <a href="https://www.nav.no/kontaktoss">kontakter oss</a>. Du finner saksbehandlingstiden på <a href="https://www.nav.no/saksbehandlingstider#foreldrepenger">nav.no/saksbehandlingstider#foreldrepenger</a> eller i brev fra Nav.
                         </p>
                     </template>
                     <template lwc:else>
                         <div class="descholder slds-var-m-bottom_large">
                             <p class="navds-body-short navds-body-short--small blokk-xs description">
-                                Hvis du kan være berørt av fedrekvotesaken, ber vi om at du fyller ut dette skjemaet så
-                                vi kan vurdere saken din. Du blir kontaktet hvis vi trenger flere opplysninger fra deg.
+                                For at vi skal kunne vurdere saken på nytt, ber vi om at du fyller ut dette skjemaet. Du blir kontaktet hvis vi trenger flere opplysninger fra deg.
                             </p>
                         </div>
                         <div class="text-start addMargin navds-form-field navds-form-field--medium">
